outputs/tsp_constructive-constructive/ab-mcts-ahd/2025-09-27_14-35-36/evaluations/problem_eval4567925697957309640_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance based on the decreasing number of unvisited nodes and incorporates a penalty for path congestion to avoid cycles.}
                                                                                                                                ^
SyntaxError: unmatched '}'

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance based on the decreasing number of unvisited nodes and incorporates a penalty for path congestion to avoid cycles.}
                                                                                                                                ^
SyntaxError: unmatched '}'
